# riscv-uarch-attacks

./: .gitignore  CMakeLists.txt  README.md  build  build-rv-only  pushtoaws.sh
doc/: Doxyfile  Doxyfile.in  Makefile.am
prototypes/: CMakeLists.txt  pk
prototypes/addrconvert/: CMakeLists.txt  prototype  prototype_addrconvert.c  prototype_addrconvert.h
prototypes/convert_k_to_bytes/: prototype  prototype_convert_k_to_bytes.c  prototype_convert_k_to_bytes.h
prototypes/flushcache/: CMakeLists.txt  prototype  prototype_flushcache.c  prototype_flushcache.h
prototypes/fork_to_same_cpu/: CMakeLists.txt  prototype  prototype_fork_to_same_cpu.c  prototype_fork_to_same_cpu.h
prototypes/primesetgen/: prototype  prototype_primesetgen.c  prototype_primesetgen.h
results/: analyse.py  analysis_output.txt  hitormiss_analysis.py
src/: CMakeLists.txt  addr.c  addr.h  debug_log.c  debug_log.h  demo.c  demo.h  hitvsmiss_datacollect.c  hitvsmiss_datacollect.h  l1pp_datacollect.c  l1pp_datacollect.h  low.c  low.h  util.c  util.h
src/l1_contention/: CMakeLists.txt  l1_contention.c  l1_contention.h
src/l1pp/: CMakeLists.txt  l1pp.c  l1pp.h
testenv/: README.md  qemu-testenv.sh  rootfs.tar  uartlog
tests/: CMakeLists.txt  test_addr.c  test_addr.h  test_low.c  test_low.h  test_util.c  test_util.h  testrunner.c
